k8s/backend-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: challenge-flutter-go
spec:
  selector:
    app: challenge-flutter-go-backend-deployment
  ports:
  - port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-flutter-go-backend-deployment
  namespace: challenge-flutter-go
spec:
  selector:
    matchLabels:
      app: challenge-flutter-go-backend-deployment
  template:
    metadata:
      labels:
        app: challenge-flutter-go-backend-deployment
    spec:
      containers:
      - name: challenge-flutter-go-backend-deployment
        image: gatien1/challenge-flutter-go-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
