k8s/database-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: challenge-flutter-go
spec:
  selector:
    app: challenge-flutter-go-database-deployment
  ports:
  - port: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-flutter-go-database-deployment
  namespace: challenge-flutter-go
spec:
  selector:
    matchLabels:
      app: challenge-flutter-go-database-deployment
  template:
    metadata:
      labels:
        app: challenge-flutter-go-database-deployment
    spec:
      volumes:
      - name: challenge-flutter-go-database-pv-storage
        persistentVolumeClaim:
          claimName: challenge-flutter-go-database-pvc
      containers:
      - name: challenge-flutter-go-database-deployment
        image: postgres:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: challenge-flutter-go-database-pv-storage
          mountPath: /var/lib/postgresql/data
